2006-05-11  Sven Panne  <sven.panne@aedion.de>

	* tests/altest/altest.c: Reformatted automatically with GNU indent. In
	the future, please use "make indent" before commiting (if possible).

	* tests/altest/altest.c(SA_ListenerOrientation): Don't use the ambiguous
	"foo=-1".

	* tests/altest/altest.c: Hopefully improved header selection for Macs.

2006-05-10  Sven Panne  <sven.panne@aedion.de>

	* tests/altest/Makefile.am: Added a "README" target for generating docs
	directly from the sources.

	* tests/altest/gendocs.py: Added.
	
	* tests/altest/altest.c: Fixed mini-typo in comment.
	
	* tests/altest/altest.c: Centralized #if for _kbhit().

	* tests/altest/altest.c(main,I_QueueTest,I_StereoTest): Remove #ifs for
	ancient OpenAL versions on Linux.

	* tests/altest/altest.c: Remove useless return statements.

	* tests/altest/altest.c: Make the Ogg Vorbis test dynamic.

	* tests/altest/altest.c: Moved filenames into #defines.

	* tests/altest/sounds/README: Added info about footadpcm.wav.

	* tests/altest/sounds/footadpcm.wav: Added.

	* tests/altest/sounds/README: Added.

	* tests/altest/altest.c: Get value of AL_FORMAT_VORBIS_EXT dynamically.

	* tests/altest/altest.c: Unbreak Ogg Vorbis tests.

	* tests/altest/altest.c: Consistently use #if for enabling features.

	* tests/altest/altest.c(I_SetSourceOffsetTest): Don't rely on undefined
	C semantics.
	
	* tests/altest/altest.c(I_QueueTest): Removed unused variable.

	* tests/altest/altest.c(main,FA_StateTransition,SA_StringQueries,
	SA_ListenerGain,SA_ListenerOrientation,I_CaptureAndPlayTest): Don't mix
	declarations and code.

	* tests/altest/altest.c: Use ALboolean instead of bool. Compiles again
	on Linux as a plain C program.

	* tests/altest/altest.c(I_QueueTest): Use arrays instead of new/delete.

	* tests/altest/altest.c: Simplified header inclusion.

	* tests/altest/altest.c: Use C comment syntax, not C++ syntax.

	* tests/altest/altest.c: Start from scratch (i.e. altest.cpp) again to